<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/outputstroke"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="117dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/power"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="binOperator"
                android:text="@string/power" />

            <Button
                android:id="@+id/expo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="binOperator"
                android:text="@string/exponent" />

            <Button
                android:id="@+id/log"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/log" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ceil"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/ceiling" />

            <Button
                android:id="@+id/floor"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/floor" />

            <Button
                android:id="@+id/log10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/log_10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/sin" />

            <Button
                android:id="@+id/cos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/cos" />

            <Button
                android:id="@+id/tan"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/tan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sqaureroot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/x" />

            <Button
                android:id="@+id/round"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="uniOperator"
                android:text="@string/round" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_7"
                android:textColor="#BBDEFB" />

            <Button
                android:id="@+id/btn8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_8"
                android:textColor="#BBDEFB" />

            <Button
                android:id="@+id/btn9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_9"
                android:textColor="#BBDEFB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_4"
                android:textColor="#BBDEFB" />

            <Button
                android:id="@+id/btn5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_5"
                android:textColor="#BBDEFB" />

            <Button
                android:id="@+id/btn6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_6"
                android:textColor="#BBDEFB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_1"
                android:textColor="#BBDEFB" />

            <Button
                android:id="@+id/btn2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_2"
                android:textColor="#BBDEFB" />

            <Button
                android:id="@+id/btn3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_3"
                android:textColor="#BBDEFB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="onTap"
                android:text="@string/_0"
                android:textColor="#BBDEFB"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnDecimal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:fontFamily="sans-serif-black"
                android:onClick="onTap"
                android:text="@string/dec"
                android:textColor="#BBDEFB" />

            <Button
                android:id="@+id/btnRem"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:backgroundTint="#655D5D"
                android:onClick="binOperator"
                android:text="@string/rem"
                android:textColor="#BBDEFB" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:fontFamily="sans-serif-black"
            android:onClick="binOperator"
            android:text="@string/plusbutton" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:onClick="binOperator"
            android:text="@string/subbutton" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:onClick="binOperator"
            android:text="@string/divbutton" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:onClick="binOperator"
            android:text="@string/dividebutton" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_dark"
            android:fontFamily="sans-serif-black"
            android:onClick="equals"
            android:text="@string/equalbutton"
            android:textColor="#212121" />
    </LinearLayout>

    <Button
        android:id="@+id/clearbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/clearDisable"
        android:enabled="true"
        android:onClick="clear"
        android:text="@string/all_clear"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/clearOne"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/one_clear"
        android:onClick="clearOne"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/clearbtn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/baseline_arrow_forward_24_light" />

</androidx.constraintlayout.widget.ConstraintLayout>